2.x/it/SUMMARY.md
# Indice dei contenuti

* [Documentazione di Chamilo 2.0](README.md)

## Guida per l'Insegnante

* [Guida per l'Insegnante](teacher-guide/README.md)
  * [Primi Passi](teacher-guide/getting-started/README.md)
    * [Comprendere l'Interfaccia](teacher-guide/getting-started/understanding-the-interface.md)
    * [Il Tuo Profilo](teacher-guide/getting-started/your-profile.md)
  * [Creare il Tuo Corso](teacher-guide/creating-your-course/README.md)
    * [Impostazioni del Corso](teacher-guide/creating-your-course/course-settings.md)
    * [Homepage del Corso](teacher-guide/creating-your-course/course-homepage.md)
  * [Aggiungere Contenuti](teacher-guide/adding-content/README.md)
    * [Documenti](teacher-guide/adding-content/documents.md)
    * [Link](teacher-guide/adding-content/links.md)
    * [Percorsi di Apprendimento](teacher-guide/adding-content/learning-paths.md)
    * [Glossario](teacher-guide/adding-content/glossary.md)
    * [Annunci](teacher-guide/adding-content/announcements.md)
  * [Valutare gli Studenti](teacher-guide/assessing-learners/README.md)
    * [Esercizi](teacher-guide/assessing-learners/exercises.md)
    * [Compiti](teacher-guide/assessing-learners/assignments.md)
    * [Sondaggi](teacher-guide/assessing-learners/surveys.md)
    * [Presenze](teacher-guide/assessing-learners/attendance.md)
    * [Registro dei Voti](teacher-guide/assessing-learners/gradebook.md)
  * [Collaborazione e Comunicazione](teacher-guide/collaboration-and-communication/README.md)
    * [Forum](teacher-guide/collaboration-and-communication/forums.md)
    * [Chat](teacher-guide/collaboration-and-communication/chat.md)
    * [Gruppi](teacher-guide/collaboration-and-communication/groups.md)
    * [Wiki](teacher-guide/collaboration-and-communication/wiki.md)
    * [Blog](teacher-guide/collaboration-and-communication/blog.md)
    * [Videoconferenza](teacher-guide/collaboration-and-communication/video-conferencing.md)
  * [Monitoraggio e Report](teacher-guide/tracking-and-reporting/README.md)
    * [Monitoraggio degli Studenti](teacher-guide/tracking-and-reporting/learner-tracking.md)
    * [Report del Corso](teacher-guide/tracking-and-reporting/course-reports.md)
    * [Certificati e Competenze](teacher-guide/tracking-and-reporting/certificates-and-skills.md)
  * [Strumenti di Intelligenza Artificiale](teacher-guide/ai-tools/README.md)
    * [Tutor AI](teacher-guide/ai-tools/ai-tutor.md)
    * [Generatore di Esercizi](teacher-guide/ai-tools/exercise-generator.md)
    * [Generatore di Percorsi di Apprendimento](teacher-guide/ai-tools/learning-path-generator.md)
    * [Valutazione con AI](teacher-guide/ai-tools/ai-grading.md)
  * [Strumenti Aggiuntivi](teacher-guide/additional-tools/README.md)
    * [Agenda](teacher-guide/additional-tools/agenda.md)
    * [Blocco Note](teacher-guide/additional-tools/notebook.md)
    * [Dropbox](teacher-guide/additional-tools/dropbox.md)
    * [Portfolio](teacher-guide/additional-tools/portfolio.md)
    * [Progresso del Corso](teacher-guide/additional-tools/course-progress.md)
  * [Rete Sociale](teacher-guide/social-network.md)
  * [Sessioni](teacher-guide/sessions.md)
  * [Filiali e Aule](teacher-guide/branches-and-rooms.md)
  * [Ticket di Supporto](teacher-guide/tickets.md)
  * [Appendice](teacher-guide/appendix/faq.md)
    * [FAQ](teacher-guide/appendix/faq.md)
    * [Glossario](teacher-guide/appendix/glossary.md)

## Guida all'Amministrazione

* [Guida all'Amministrazione](admin-guide/README.md)
  * [Introduzione](admin-guide/getting-started/README.md)
    * [Panoramica dell'Interfaccia Amministrativa](admin-guide/getting-started/admin-interface-overview.md)
  * [Installazione](admin-guide/installation/README.md)
    * [Requisiti del Server](admin-guide/installation/server-requirements.md)
    * [Procedura Guidata di Installazione](admin-guide/installation/installation-wizard.md)
    * [Configurazione](admin-guide/installation/configuration.md)
    * [Archiviazione Cloud](admin-guide/installation/cloud-storage.md)
    * [Configurazione Email](admin-guide/installation/email-configuration.md)
    * [Aggiornamento](admin-guide/installation/upgrading.md)
  * [Utenti](admin-guide/users/README.md)
    * [Ruoli Utente](admin-guide/users/user-roles.md)
    * [Gestione degli Utenti](admin-guide/users/managing-users.md)
    * [Gruppi di Utenti](admin-guide/users/user-groups.md)
    * [Profilazione Utente](admin-guide/users/user-profiling.md)
  * [Corsi](admin-guide/courses/README.md)
    * [Gestione dei Corsi](admin-guide/courses/managing-courses.md)
    * [Categorie dei Corsi](admin-guide/courses/course-categories.md)
    * [Importazione ed Esportazione dei Corsi](admin-guide/courses/course-import-export.md)
  * [Sessioni](admin-guide/sessions/README.md)
    * [Gestione delle Sessioni](admin-guide/sessions/managing-sessions.md)
    * [Categorie delle Sessioni](admin-guide/sessions/session-categories.md)
    * [Carriere e Promozioni](admin-guide/sessions/careers-and-promotions.md)
    * [Classi](admin-guide/sessions/classes.md)
  * [Impostazioni della Piattaforma](admin-guide/platform-settings/README.md)
    * [Identità dell'Amministratore](admin-guide/platform-settings/admin-settings.md)
    * [Agenda](admin-guide/platform-settings/agenda-settings.md)
    * [Assistenti AI](admin-guide/platform-settings/ai-helpers-settings.md)
    * [Annunci](admin-guide/platform-settings/announcement-settings.md)
    * [Compiti (Lavori)](admin-guide/platform-settings/work-settings.md)
    * [Presenze](admin-guide/platform-settings/attendance-settings.md)
    * [CAS (legacy)](admin-guide/platform-settings/cas-settings.md)
    * [Certificati](admin-guide/platform-settings/certificate-settings.md)
    * [Chat](admin-guide/platform-settings/chat-settings.md)
    * [Corso](admin-guide/platform-settings/course-settings.md)
    * [Catalogo dei Corsi](admin-guide/platform-settings/catalog-settings.md)
    * [Cron Jobs](admin-guide/platform-settings/crons-settings.md)
    * [Visualizzazione](admin-guide/platform-settings/display-settings.md)
    * [Documenti](admin-guide/platform-settings/document-settings.md)
    * [Dropbox](admin-guide/platform-settings/dropbox-settings.md)
    * [Editor](admin-guide/platform-settings/editor-settings.md)
    * [Esercizi (Test)](admin-guide/platform-settings/exercise-settings.md)
    * [Forum](admin-guide/platform-settings/forum-settings.md)
    * [Glossario](admin-guide/platform-settings/glossary-settings.md)
    * [Registro delle Valutazioni (Valutazioni)](admin-guide/platform-settings/gradebook-settings.md)
    * [Gruppi](admin-guide/platform-settings/group-settings.md)
    * [Lingue](admin-guide/platform-settings/language-settings.md)
    * [Percorsi di Apprendimento](admin-guide/platform-settings/lp-settings.md)
    * [Posta](admin-guide/platform-settings/mail-settings.md)
    * [Messaggistica](admin-guide/platform-settings/message-settings.md)
    * [Piattaforma](admin-guide/platform-settings/platform-settings.md)
    * [Privacy](admin-guide/platform-settings/privacy-settings.md)
    * [Registrazione](admin-guide/platform-settings/registration-settings.md)
    * [Ricerca](admin-guide/platform-settings/search-settings.md)
    * [Sicurezza](admin-guide/platform-settings/security-settings.md)
    * [Sessioni](admin-guide/platform-settings/session-settings.md)
    * [Competenze](admin-guide/platform-settings/skill-settings.md)
    * [Rete Sociale](admin-guide/platform-settings/social-settings.md)
    * [Sondaggi](admin-guide/platform-settings/survey-settings.md)
    * [Ticket](admin-guide/platform-settings/ticket-settings.md)
    * [Monitoraggio](admin-guide/platform-settings/tracking-settings.md)
    * [Profilo Utente](admin-guide/platform-settings/profile-settings.md)
    * [Servizi Web](admin-guide/platform-settings/webservice-settings.md)
    * [Flussi di Lavoro](admin-guide/platform-settings/workflows-settings.md)
  * [Autenticazione](admin-guide/authentication/README.md)
    * [OAuth2](admin-guide/authentication/oauth2.md)
    * [LDAP](admin-guide/authentication/ldap.md)
    * [CAS](admin-guide/authentication/cas.md)
    * [SCIM](admin-guide/authentication/scim.md)
    * [Configurazione SSO](admin-guide/authentication/sso-configuration.md)
  * [Integrazioni](admin-guide/integrations/README.md)
    * [Videoconferenza](admin-guide/integrations/video-conferencing.md)
    * [LTI 1.3](admin-guide/integrations/lti.md)
    * [xAPI](admin-guide/integrations/xapi.md)
    * [OnlyOffice](admin-guide/integrations/onlyoffice.md)
    * [Configurazione AI](admin-guide/integrations/ai-configuration.md)
  * [Plugin](admin-guide/plugins/README.md)
    * [Gestione dei Plugin](admin-guide/plugins/managing-plugins.md)
  * [Multi-URL](admin-guide/multi-url/README.md)
    * [URL di Accesso](admin-guide/multi-url/access-urls.md)
  * [Ottimizzazione delle Prestazioni](admin-guide/performance-tuning.md)
  * [Manutenzione](admin-guide/maintenance/README.md)
    * [Backup](admin-guide/maintenance/backups.md)
    * [Stato del Sistema](admin-guide/maintenance/system-status.md)
    * [Pulizia dell'Archivio](admin-guide/maintenance/archive-cleanup.md)
  * [Branding](admin-guide/branding/README.md)
    * [Temi di Colore](admin-guide/branding/color-themes.md)
    * [Personalizzazione del Portale](admin-guide/branding/portal-customization.md)
    * [Modelli](admin-guide/branding/templates.md)
  * [Appendice](admin-guide/appendix/faq.md)
    * [FAQ](admin-guide/appendix/faq.md)
    * [Guida alla Sicurezza](admin-guide/appendix/security-guide.md)
    * [Glossario](admin-guide/appendix/glossary.md)

## Guida per Sviluppatori

* [Guida per Sviluppatori](developer-guide/README.md)
  * [Introduzione](developer-guide/getting-started/README.md)
    * [Stack Tecnologico](developer-guide/getting-started/tech-stack.md)
    * [Configurazione per lo Sviluppo](developer-guide/getting-started/development-setup.md)
    * [Struttura del Progetto](developer-guide/getting-started/project-structure.md)
  * [Backend](developer-guide/backend/README.md)
    * [Architettura Symfony](developer-guide/backend/symfony-architecture.md)
    * [Entità e Doctrine](developer-guide/backend/entities-and-doctrine.md)
    * [Sistema delle Risorse](developer-guide/backend/resource-system.md)
    * [Controller](developer-guide/backend/controllers.md)
    * [Eventi e Listener](developer-guide/backend/events-and-listeners.md)
    * [Sistema delle Impostazioni](developer-guide/backend/settings-system.md)
  * [API](developer-guide/api/README.md)
    * [Autenticazione](developer-guide/api/authentication.md)
    * [Riferimento agli Endpoint](developer-guide/api/endpoints-reference.md)
    * [Azioni Personalizzate](developer-guide/api/custom-actions.md)
    * [Webhook](developer-guide/api/webhooks.md)
  * [Frontend](developer-guide/frontend/README.md)
    * [Componenti Vue](developer-guide/frontend/vue-components.md)
    * [Viste e Routing](developer-guide/frontend/views-and-routing.md)
    * [Gestione dello Stato](developer-guide/frontend/state-management.md)
    * [Sistema di Build](developer-guide/frontend/build-system.md)
  * [Temi](developer-guide/theming/README.md)
    * [Temi di Colore](developer-guide/theming/color-themes.md)
    * [CSS e Tailwind](developer-guide/theming/css-and-tailwind.md)
    * [Template Twig](developer-guide/theming/twig-templates.md)
  * [Plugin](developer-guide/plugins/README.md)
    * [Architettura dei Plugin](developer-guide/plugins/plugin-architecture.md)
    * [Creazione di un Plugin](developer-guide/plugins/creating-a-plugin.md)
    * [Plugin per Strumenti del Corso](developer-guide/plugins/course-tool-plugins.md)
  * [Contribuire](developer-guide/contributing/README.md)
    * [Convenzioni di Codifica](developer-guide/contributing/coding-conventions.md)
    * [Flusso di Lavoro Git](developer-guide/contributing/git-workflow.md)
    * [Test](developer-guide/contributing/testing.md)
  * [Appendice](developer-guide/appendix/database-schema.md)
    * [Schema del Database](developer-guide/appendix/database-schema.md)
    * [Glossario](developer-guide/appendix/glossary.md)

## Informazioni su Questa Documentazione

* [Registro delle Modifiche](CHANGELOG.md)