3.x/it/SUMMARY.md
# Indice

* [Documentazione di Chamilo 3.0](README.md)

## Guida per il docente

* [Guida per il docente](teacher-guide/README.md)
  * [Per iniziare](teacher-guide/getting-started/README.md)
    * [Comprendere l'interfaccia](teacher-guide/getting-started/understanding-the-interface.md)
    * [Il tuo profilo](teacher-guide/getting-started/your-profile.md)
  * [Creare il corso](teacher-guide/creating-your-course/README.md)
    * [Impostazioni del corso](teacher-guide/creating-your-course/course-settings.md)
    * [Homepage del corso](teacher-guide/creating-your-course/course-homepage.md)
    * [Descrizione del corso](teacher-guide/creating-your-course/course-description.md)
  * [Aggiungere contenuti](teacher-guide/adding-content/README.md)
    * [Documenti](teacher-guide/adding-content/documents.md)
    * [Collegamenti](teacher-guide/adding-content/links.md)
    * [Percorsi formativi](teacher-guide/adding-content/learning-paths.md)
    * [Glossario](teacher-guide/adding-content/glossary.md)
    * [Annunci](teacher-guide/adding-content/announcements.md)
    * [Formule matematiche](teacher-guide/adding-content/math-formulas.md)
    * [Contenuti multilingue](teacher-guide/adding-content/multi-language-content.md)
  * [Valutare gli studenti](teacher-guide/assessing-learners/README.md)
    * [Iscrivere gli utenti](teacher-guide/assessing-learners/subscribing-users.md)
    * [Esercizi](teacher-guide/assessing-learners/exercises.md)
    * [Compiti](teacher-guide/assessing-learners/assignments.md)
    * [Sondaggi](teacher-guide/assessing-learners/surveys.md)
    * [Presenze](teacher-guide/assessing-learners/attendance.md)
    * [Registro dei voti](teacher-guide/assessing-learners/gradebook.md)
  * [Collaborazione e comunicazione](teacher-guide/collaboration-and-communication/README.md)
    * [Forum](teacher-guide/collaboration-and-communication/forums.md)
    * [Chat](teacher-guide/collaboration-and-communication/chat.md)
    * [Gruppi](teacher-guide/collaboration-and-communication/groups.md)
    * [Wiki](teacher-guide/collaboration-and-communication/wiki.md)
    * [Blog](teacher-guide/collaboration-and-communication/blog.md)
    * [Videoconferenza](teacher-guide/collaboration-and-communication/video-conferencing.md)
  * [Monitoraggio e report](teacher-guide/tracking-and-reporting/README.md)
    * [Monitoraggio degli studenti](teacher-guide/tracking-and-reporting/learner-tracking.md)
    * [Report del corso](teacher-guide/tracking-and-reporting/course-reports.md)
    * [Certificati e competenze](teacher-guide/tracking-and-reporting/certificates-and-skills.md)
  * [Strumenti di IA](teacher-guide/ai-tools/README.md)
    * [Tutor IA](teacher-guide/ai-tools/ai-tutor.md)
    * [Generatore di esercizi](teacher-guide/ai-tools/exercise-generator.md)
    * [Generatore di percorsi formativi](teacher-guide/ai-tools/learning-path-generator.md)
    * [Valutazione con IA](teacher-guide/ai-tools/ai-grading.md)
    * [Generatore di termini del glossario](teacher-guide/ai-tools/glossary-generator.md)
    * [Generazione di media con IA](teacher-guide/ai-tools/ai-media-generation.md)
    * [Generatore di immagine del corso](teacher-guide/ai-tools/course-picture-generator.md)
  * [Strumenti aggiuntivi](teacher-guide/additional-tools/README.md)
    * [Agenda](teacher-guide/additional-tools/agenda.md)
    * [Blocco note](teacher-guide/additional-tools/notebook.md)
    * [Dropbox](teacher-guide/additional-tools/dropbox.md)
    * [Portfolio](teacher-guide/additional-tools/portfolio.md)
    * [Avanzamento del corso](teacher-guide/additional-tools/course-progress.md)
  * [Plugin](teacher-guide/plugins/README.md)
    * [Esercizio focalizzato](teacher-guide/plugins/exercise-focused.md)
    * [Monitoraggio degli esercizi](teacher-guide/plugins/exercise-monitoring.md)
    * [Firma dell'esercizio](teacher-guide/plugins/exercise-signature.md)
    * [Valutazione delle opzioni delle domande](teacher-guide/plugins/question-options-evaluation.md)
    * [Posizionamento](teacher-guide/plugins/positioning.md)
    * [Test in PDF](teacher-guide/plugins/test-to-pdf.md)
    * [Editor di contenuti C-Studio](teacher-guide/plugins/cstudio.md)
    * [Importazione H5P](teacher-guide/plugins/h5p-import.md)
    * [Notifica nella homepage del corso](teacher-guide/plugins/notify-in-course-home.md)
    * [Certificato personalizzato](teacher-guide/plugins/custom-certificate.md)
    * [Accordo legale del corso](teacher-guide/plugins/course-legal-agreement.md)
    * [Follow-up dello studente](teacher-guide/plugins/student-follow-up.md)
    * [Calendario di apprendimento](teacher-guide/plugins/learning-calendar.md)
    * [Note del docente](teacher-guide/plugins/teacher-notes.md)
    * [Client IMS/LTI](teacher-guide/plugins/ims-lti.md)
    * [Provider LTI 1.3 Advantage](teacher-guide/plugins/lti-1-3-advantage-provider.md)
    * [Esportazione sondaggio CSV](teacher-guide/plugins/survey-export-csv.md)
    * [Esportazione sondaggio TXT](teacher-guide/plugins/survey-export-txt.md)
  * [Rete sociale](teacher-guide/social-network.md)
  * [Sessioni](teacher-guide/sessions.md)
  * [Sedi e aule](teacher-guide/branches-and-rooms.md)
  * [Ticket di supporto](teacher-guide/tickets.md)
  * [Appendice](teacher-guide/appendix/faq.md)
    * [FAQ](teacher-guide/appendix/faq.md)
    * [Glossario](teacher-guide/appendix/glossary.md)

## Guida all'amministrazione

* [Guida all'amministrazione](admin-guide/README.md)
  * [Per iniziare](admin-guide/getting-started/README.md)
    * [Panoramica dell'interfaccia di amministrazione](admin-guide/getting-started/admin-interface-overview.md)
  * [Installazione](admin-guide/installation/README.md)
    * [Requisiti del server](admin-guide/installation/server-requirements.md)
    * [Installazione guidata](admin-guide/installation/installation-wizard.md)
    * [Configurazione](admin-guide/installation/configuration.md)
    * [Archiviazione cloud](admin-guide/installation/cloud-storage.md)
    * [Configurazione e-mail](admin-guide/installation/email-configuration.md)
    * [Aggiornamento](admin-guide/installation/upgrading.md)
  * [Utenti](admin-guide/users/README.md)
    * [Ruoli utente](admin-guide/users/user-roles.md)
    * [Gestione degli utenti](admin-guide/users/managing-users.md)
    * [Gruppi di utenti](admin-guide/users/user-groups.md)
    * [Profilazione degli utenti](admin-guide/users/user-profiling.md)
  * [Corsi](admin-guide/courses/README.md)
    * [Gestione dei corsi](admin-guide/courses/managing-courses.md)
    * [Categorie di corsi](admin-guide/courses/course-categories.md)
    * [Importazione ed esportazione dei corsi](admin-guide/courses/course-import-export.md)
  * [Sessioni](admin-guide/sessions/README.md)
    * [Gestione delle sessioni](admin-guide/sessions/managing-sessions.md)
    * [Categorie di sessioni](admin-guide/sessions/session-categories.md)
    * [Carriere e promozioni](admin-guide/sessions/careers-and-promotions.md)
    * [Classi](admin-guide/sessions/classes.md)
  * [Piattaforma](admin-guide/platform/README.md)
    * [Lingue](admin-guide/platform/languages.md)
    * [Notizie del portale](admin-guide/platform/portal-news.md)
    * [Agenda globale](admin-guide/platform/global-agenda.md)
    * [Pagine](admin-guide/platform/pages.md)
    * [Strumenti della piattaforma](admin-guide/platform/platform-tools.md)
  * [Impostazioni della piattaforma](admin-guide/platform-settings/README.md)
    * [Identità dell'amministratore](admin-guide/platform-settings/admin-settings.md)
    * [Agenda](admin-guide/platform-settings/agenda-settings.md)
    * [Assistenti IA](admin-guide/platform-settings/ai-helpers-settings.md)
    * [Annunci](admin-guide/platform-settings/announcement-settings.md)
    * [Compiti (Work)](admin-guide/platform-settings/work-settings.md)
    * [Presenze](admin-guide/platform-settings/attendance-settings.md)
    * [CAS (legacy)](admin-guide/platform-settings/cas-settings.md)
    * [Certificati](admin-guide/platform-settings/certificate-settings.md)
    * [Chat](admin-guide/platform-settings/chat-settings.md)
    * [Corso](admin-guide/platform-settings/course-settings.md)
    * [Catalogo dei corsi](admin-guide/platform-settings/catalog-settings.md)
    * [Cron Jobs](admin-guide/platform-settings/crons-settings.md)
    * [Visualizzazione](admin-guide/platform-settings/display-settings.md)
    * [Documenti](admin-guide/platform-settings/document-settings.md)
    * [Dropbox](admin-guide/platform-settings/dropbox-settings.md)
    * [Editor](admin-guide/platform-settings/editor-settings.md)
    * [Esercizi (Test)](admin-guide/platform-settings/exercise-settings.md)
    * [Forum](admin-guide/platform-settings/forum-settings.md)
    * [Glossario](admin-guide/platform-settings/glossary-settings.md)
    * [Registro dei voti (Valutazioni)](admin-guide/platform-settings/gradebook-settings.md)
    * [Gruppi](admin-guide/platform-settings/group-settings.md)
    * [Lingue](admin-guide/platform-settings/language-settings.md)
    * [Percorsi di apprendimento](admin-guide/platform-settings/lp-settings.md)
    * [Posta](admin-guide/platform-settings/mail-settings.md)
    * [Messaggistica](admin-guide/platform-settings/message-settings.md)
    * [Piattaforma](admin-guide/platform-settings/platform-settings.md)
    * [Privacy](admin-guide/platform-settings/privacy-settings.md)
    * [Registrazione](admin-guide/platform-settings/registration-settings.md)
    * [Ricerca](admin-guide/platform-settings/search-settings.md)
    * [Sicurezza](admin-guide/platform-settings/security-settings.md)
    * [Sessioni](admin-guide/platform-settings/session-settings.md)
    * [Competenze](admin-guide/platform-settings/skill-settings.md)
    * [Rete sociale](admin-guide/platform-settings/social-settings.md)
    * [Sondaggi](admin-guide/platform-settings/survey-settings.md)
    * [Ticket](admin-guide/platform-settings/ticket-settings.md)
    * [Tracciamento](admin-guide/platform-settings/tracking-settings.md)
    * [Profilo utente](admin-guide/platform-settings/profile-settings.md)
    * [Web Services](admin-guide/platform-settings/webservice-settings.md)
    * [Flussi di lavoro](admin-guide/platform-settings/workflows-settings.md)
  * [Analisi](admin-guide/analytics/README.md)
    * [Statistiche globali](admin-guide/analytics/global-statistics.md)
    * [Catalogo dei report](admin-guide/analytics/reports-catalog.md)
    * [Learning Analytics](admin-guide/analytics/learning-analytics.md)
    * [Report aziendali](admin-guide/analytics/corporate-reports.md)
    * [Ticket](admin-guide/analytics/tickets.md)
  * [Competenze](admin-guide/skills/README.md)
    * [Gestione delle competenze](admin-guide/skills/managing-skills.md)
    * [Ruota delle competenze](admin-guide/skills/skills-wheel.md)
    * [Classifica delle competenze](admin-guide/skills/skills-ranking.md)
    * [Competenze e valutazioni](admin-guide/skills/skills-assessments.md)
  * [Sistema](admin-guide/system/README.md)
    * [Strumenti di sistema](admin-guide/system/system-tools.md)
    * [Branding](admin-guide/system/branding/README.md)
      * [Temi di colore](admin-guide/system/branding/color-themes.md)
      * [Personalizzazione del portale](admin-guide/system/branding/portal-customization.md)
      * [Modelli](admin-guide/system/branding/templates.md)
  * [Aule](admin-guide/rooms/README.md)
    * [Gestione delle aule](admin-guide/rooms/managing-rooms.md)
    * [Ricerca disponibilità aule](admin-guide/rooms/room-availability-finder.md)
  * [Sicurezza](admin-guide/security/README.md)
    * [Audit delle attività](admin-guide/security/activities-audit.md)
    * [Tentativi di accesso](admin-guide/security/login-attempts.md)
    * [Simple IDS](admin-guide/security/simple-ids.md)
    * [Controllo della robustezza delle password](admin-guide/security/password-strength-checker.md)
    * [Integrità dei file](admin-guide/security/file-integrity.md)
  * [Plugin](admin-guide/plugins/README.md)
    * [Gestione dei plugin](admin-guide/plugins/managing-plugins.md)
  * [Controllo dello stato](admin-guide/health-check.md)
  * [Altri blocchi di amministrazione](admin-guide/other-admin-blocks/README.md)
    * [Collegamenti Chamilo.org](admin-guide/other-admin-blocks/chamilo-org-links.md)
    * [Controllo della versione](admin-guide/other-admin-blocks/version-check.md)
    * [Supporto professionale](admin-guide/other-admin-blocks/professional-support.md)
    * [Notizie da Chamilo](admin-guide/other-admin-blocks/news-from-chamilo.md)
  * [Autenticazione](admin-guide/authentication/README.md)
    * [OAuth2](admin-guide/authentication/oauth2.md)
    * [Azure Entra ID](admin-guide/authentication/azure-entra-id.md)
    * [LDAP](admin-guide/authentication/ldap.md)
    * [CAS](admin-guide/authentication/cas.md)
    * [SCIM](admin-guide/authentication/scim.md)
    * [Configurazione SSO](admin-guide/authentication/sso-configuration.md)
  * [Integrazioni](admin-guide/integrations/README.md)
    * [Videoconferenza](admin-guide/integrations/video-conferencing.md)
    * [LTI 1.3](admin-guide/integrations/lti.md)
    * [xAPI](admin-guide/integrations/xapi.md)
    * [OnlyOffice](admin-guide/integrations/onlyoffice.md)
    * [Configurazione IA](admin-guide/integrations/ai-configuration.md)
  * [Multi-URL](admin-guide/multi-url/README.md)
    * [URL di accesso](admin-guide/multi-url/access-urls.md)
  * [Ottimizzazione delle prestazioni](admin-guide/performance-tuning.md)
  * [Manutenzione](admin-guide/maintenance/README.md)
    * [Backup](admin-guide/maintenance/backups.md)
    * [Stato del sistema](admin-guide/maintenance/system-status.md)
    * [Pulizia dell'archivio](admin-guide/maintenance/archive-cleanup.md)
  * [MCP](admin-guide/mcp.md)
  * [Appendice](admin-guide/appendix/faq.md)
    * [FAQ](admin-guide/appendix/faq.md)
    * [Guida alla sicurezza](admin-guide/appendix/security-guide.md)
    * [Glossario](admin-guide/appendix/glossary.md)

## Guida dello studente

* [Guida dello studente](student-guide/README.md)
  * [Per iniziare](student-guide/getting-started/README.md)
    * [Creazione di un account](student-guide/getting-started/creating-an-account.md)
    * [Comprendere l'interfaccia](student-guide/getting-started/understanding-the-interface.md)
  * [Corsi](student-guide/courses/README.md)
    * [Iscrizione a un corso](student-guide/courses/subscribing-to-a-course.md)
    * [Orientarsi in un corso](student-guide/courses/course-tools-overview.md)
    * [Seguire un percorso di apprendimento](student-guide/courses/following-a-learning-path.md)
    * [Sostenere i test](student-guide/courses/taking-tests.md)
    * [Inviare un compito](student-guide/courses/submitting-an-assignment.md)
    * [Usare il forum](student-guide/courses/using-the-forum.md)
    * [Usare lo strumento di chat](student-guide/courses/using-the-chat-tool.md)
    * [Chatbot tutor IA](student-guide/courses/ai-tutor.md)
  * [Posta in arrivo](student-guide/inbox.md)
  * [Rete sociale](student-guide/social-network.md)
  * [I miei progressi](student-guide/my-progress.md)
  * [Account e sicurezza](student-guide/account-and-security/README.md)
    * [Reimpostazione della password](student-guide/account-and-security/resetting-your-password.md)
    * [Autenticazione a due fattori](student-guide/account-and-security/two-factor-authentication.md)
    * [CAPTCHA](student-guide/account-and-security/captcha.md)
  * [Appendice](student-guide/appendix/faq.md)
    * [FAQ](student-guide/appendix/faq.md)
    * [Glossario](student-guide/appendix/glossary.md)

## Guida per lo sviluppatore

* [Guida per lo sviluppatore](developer-guide/README.md)
  * [Per iniziare](developer-guide/getting-started/README.md)
    * [Stack tecnologico](developer-guide/getting-started/tech-stack.md)
    * [Configurazione dell'ambiente di sviluppo](developer-guide/getting-started/development-setup.md)
    * [Struttura del progetto](developer-guide/getting-started/project-structure.md)
  * [Backend](developer-guide/backend/README.md)
    * [Architettura Symfony](developer-guide/backend/symfony-architecture.md)
    * [Entità e Doctrine](developer-guide/backend/entities-and-doctrine.md)
    * [Sistema delle risorse](developer-guide/backend/resource-system.md)
    * [Controller](developer-guide/backend/controllers.md)
    * [Eventi e listener](developer-guide/backend/events-and-listeners.md)
    * [Sistema delle impostazioni](developer-guide/backend/settings-system.md)
  * [API](developer-guide/api/README.md)
    * [Autenticazione](developer-guide/api/authentication.md)
    * [Riferimento degli endpoint](developer-guide/api/endpoints-reference.md)
    * [Azioni personalizzate](developer-guide/api/custom-actions.md)
    * [Webhook](developer-guide/api/webhooks.md)
  * [Frontend](developer-guide/frontend/README.md)
    * [Componenti Vue](developer-guide/frontend/vue-components.md)
    * [Viste e routing](developer-guide/frontend/views-and-routing.md)
    * [Gestione dello stato](developer-guide/frontend/state-management.md)
    * [Sistema di build](developer-guide/frontend/build-system.md)
  * [Temi](developer-guide/theming/README.md)
    * [Temi di colore](developer-guide/theming/color-themes.md)
    * [CSS e Tailwind](developer-guide/theming/css-and-tailwind.md)
    * [Template Twig](developer-guide/theming/twig-templates.md)
  * [Plugin](developer-guide/plugins/README.md)
    * [Architettura dei plugin](developer-guide/plugins/plugin-architecture.md)
    * [Creazione di un plugin](developer-guide/plugins/creating-a-plugin.md)
    * [Plugin degli strumenti del corso](developer-guide/plugins/course-tool-plugins.md)
  * [Contribuire](developer-guide/contributing/README.md)
    * [Convenzioni di codice](developer-guide/contributing/coding-conventions.md)
    * [Flusso di lavoro Git](developer-guide/contributing/git-workflow.md)
    * [Testing](developer-guide/contributing/testing.md)
  * [Appendice](developer-guide/appendix/database-schema.md)
    * [Schema del database](developer-guide/appendix/database-schema.md)
    * [Glossario](developer-guide/appendix/glossary.md)

## Informazioni su questa documentazione

* [Changelog](CHANGELOG.md)